add shodow movie

--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
 						<div class="col-md-12">
 							<div class="fh5co-gallery">
 
-								<a class="gallery-item" data-tab="ar_self_introduction" href="ar/stand.html">
+								<!-- <a class="gallery-item" data-tab="ar_self_introduction" href="ar/stand.html">
 									<img src="images/works/ar_self_introduction/ar.jpg" alt="ar_self_introduction">
 									<span class="overlay">
 										<h2>AR 自己紹介(仮)</h2>
 										<span>AR自己アバターによる自己紹介</span>
 									</span>
-								</a>
+								</a> -->
 
 								<a class="gallery-item" data-tab="autonomous_shadow" href="works/autonomous_shadow.html">
 									<img src="images/works/autonomous_shadow/autonomous_shadow.jpg" alt="autonomous_shadow">
