--- a/works/autonomous_shadow.html
+++ b/works/autonomous_shadow.html
@@ -86,9 +86,14 @@
 
 							<div class="fh5co-gallery">
 
-								<div class="gallery-item">
+								<!-- <div class="gallery-item">
 									<img src="../images/works/autonomous_shadow/autonomous_shadow.jpg" alt="autonomous_shadow">
-								</div>
+								</div> -->
+								<div class="gallery-item">
+                                    <div class="iframe-wrap">
+                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/tauLp-iWAnI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    </div>
+                                </div>
 
 								<div class="fh5co-text">
 									<p><br>
