modify notion domain

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
-    <title>Redirecting to https://kukikeita.notion.site/Keita-Kuki-Portfolio-7e60a1a18c1c402db8cc2f8363fe168a?pvs=4</title>
-    <meta http-equiv="refresh" content="0; URL=https://kukikeita.notion.site/Keita-Kuki-Portfolio-7e60a1a18c1c402db8cc2f8363fe168a?pvs=4">
-    <link rel="canonical" href="https://kukikeita.notion.site/Keita-Kuki-Portfolio-7e60a1a18c1c402db8cc2f8363fe168a?pvs=4">
+    <title>Redirecting to https://keitakuki.notion.site/Keita-Kuki-Portfolio-7e60a1a18c1c402db8cc2f8363fe168a?pvs=4</title>
+    <meta http-equiv="refresh" content="0; URL=https://keitakuki.notion.site/Keita-Kuki-Portfolio-7e60a1a18c1c402db8cc2f8363fe168a?pvs=4">
+    <link rel="canonical" href="https://keitakuki.notion.site/Keita-Kuki-Portfolio-7e60a1a18c1c402db8cc2f8363fe168a?pvs=4">
 </head>
 </html>
